update composer and write some tests

--- a/composer.json
+++ b/composer.json
@@ -55,6 +55,7 @@
     "prefer-stable": true,
     "scripts": {
         "ide" : [
+            "php artisan ide-helper:eloquent",
             "php artisan ide-helper:generate",
             "php artisan ide-helper:meta",
             "php artisan ide-helper:models -N"
